--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,9 @@ description: > # your text below (remove <br> elements if you don't need line br
   <a href="https://www.linkedin.com/in/brian-bogue-jimenez-6b971620a/">View My LinkedIn Profile</a> 
   <br><br>
   <a href="https://www.researchgate.net/profile/Brian-Bogue-Jimenez/">View My ResearchGate Profile</a> 
+  <br><br>
+  <a href="https://sites.google.com/view/oirl/home/">View OIRL's website Profile</a> 
+  
   
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
