--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,8 @@ description: > # your text below (remove <br> elements if you don't need line br
   <a href="https://www.researchgate.net/profile/Brian-Bogue-Jimenez/">View My ResearchGate Profile</a> 
   <br><br>
   <a href="https://sites.google.com/view/oirl/home/">View OIRL's website Profile</a> 
+  <br><br>
+  <a href="https://scholar.google.com/citations?user=M6TFRTsAAAAJ&hl=en">View My GoogleScholar</a> 
   
   
 remote_theme: pages-themes/minimal@v0.2.0
