--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Brian Bogue Jimenez # your name (or website title) here
-logo: "/images/profile.jpg?raw=true" # your photo (or logo) here
+logo: "/images/profile.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Computer Vision Engineer for Optical Imaging Research Lab  
   <br><br>
