--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,8 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   <a href="https://scholar.google.com/citations?user=M6TFRTsAAAAJ&hl=en">View My GoogleScholar</a> 
   <br><br>
+  Former Computer Vision Engineer associated with Optical Imaging Research Lab: 
+  <br><br>
   <a href="https://sites.google.com/view/oirl/home/">View OIRL's website</a> 
   
 remote_theme: pages-themes/minimal@v0.2.0
