--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   <a href="https://scholar.google.com/citations?user=M6TFRTsAAAAJ&hl=en">View My GoogleScholar</a> 
   <br><br>
-  Former Computer Vision Engineer associated with Optical Imaging Research Lab: 
+  Formerly associated with OIRL: 
   <br><br>
   <a href="https://sites.google.com/view/oirl/home/">View OIRL's website</a> 
   
