--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   Contact me: 808-224-5780
   bribogue@gmail.com 
   <br><br>
-  <a href="/SEng_Resume_BrianBogueJimenez-2024.pdf">View My Resume</a>
+  <br><a href="/SEng_Resume_BrianBogueJimenez-2024.pdf">View My Resume</a><br>
   <a href="/CV_BrianBogue_2024.pdf">View My Curriculum Vitae (CV)</a>
   <a href="https://www.linkedin.com/in/brian-bogue-jimenez-6b971620a/">View My LinkedIn Profile</a> 
   <a href="https://www.researchgate.net/profile/Brian-Bogue-Jimenez/">View My ResearchGate Profile</a> 
