--- a/_config.yml
+++ b/_config.yml
@@ -2,17 +2,17 @@ title: Brian Bogue Jimenez # your name (or website title) here
 logo: "/images/profile.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Freelance Software Engineer  
+  <br><br>
   Contact me: 808-224-5780
   bribogue@gmail.com 
   <br><br>
   <br><a href="/SEng_Resume_BrianBogueJimenez-2024.pdf">View My Resume</a><br>
-  <a href="/CV_BrianBogue_2024.pdf">View My Curriculum Vitae (CV)</a>
-  <a href="https://www.linkedin.com/in/brian-bogue-jimenez-6b971620a/">View My LinkedIn Profile</a> 
-  <a href="https://www.researchgate.net/profile/Brian-Bogue-Jimenez/">View My ResearchGate Profile</a> 
-  <a href="https://scholar.google.com/citations?user=M6TFRTsAAAAJ&hl=en">View My GoogleScholar</a> 
-  <br><br>
-  Formerly associated with OIRL: 
-  <a href="https://sites.google.com/view/oirl/home/">View OIRL's website</a> 
+  <br><a href="/CV_BrianBogue_2024.pdf">View My Curriculum Vitae (CV)</a><br>
+  <br><a href="https://www.linkedin.com/in/brian-bogue-jimenez-6b971620a/">View My LinkedIn Profile</a><br>
+  <br><a href="https://www.researchgate.net/profile/Brian-Bogue-Jimenez/">View My ResearchGate Profile</a><br>
+  <br><a href="https://scholar.google.com/citations?user=M6TFRTsAAAAJ&hl=en">View My GoogleScholar</a><br>
+  <br>Formerly associated with OIRL:<br> 
+  <br><a href="https://sites.google.com/view/oirl/home/">View OIRL's website</a><br> 
   <br><br>
 
 remote_theme: pages-themes/minimal@v0.2.0
