--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,16 @@
 title: Brian Bogue Jimenez # your name (or website title) here
 logo: "/images/profile.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Freelance Software Engineer  
-  <br><br>
-  Contact me: 808-224-5780
-  bribogue@gmail.com 
-  <br><br>
-  <br><a href="/SEng_Resume_BrianBogueJimenez-2024.pdf">View My Resume</a><br>
-  <br><a href="/CV_BrianBogue_2024.pdf">View My Curriculum Vitae (CV)</a><br>
-  <br><a href="https://www.linkedin.com/in/brian-bogue-jimenez-6b971620a/">View My LinkedIn Profile</a><br>
-  <br><a href="https://www.researchgate.net/profile/Brian-Bogue-Jimenez/">View My ResearchGate Profile</a><br>
-  <br><a href="https://scholar.google.com/citations?user=M6TFRTsAAAAJ&hl=en">View My GoogleScholar</a><br>
-  <br>Formerly associated with OIRL:<br> 
-  <br><a href="https://sites.google.com/view/oirl/home/">View OIRL's website</a><br> 
-  <br><br>
-
+  <br>Freelance Software Engineer<br>
+  <br>Contact me: 808-224-5780<br>
+  <br>bribogue@gmail.com<br>
+  <br><a href="/SEng_Resume_BrianBogueJimenez-2024.pdf">View My Resume</a>
+  <br><a href="/CV_BrianBogue_2024.pdf">View My Curriculum Vitae (CV)</a>
+  <br><a href="https://www.linkedin.com/in/brian-bogue-jimenez-6b971620a/">View My LinkedIn Profile</a>
+  <br><a href="https://www.researchgate.net/profile/Brian-Bogue-Jimenez/">View My ResearchGate Profile</a>
+  <br><a href="https://scholar.google.com/citations?user=M6TFRTsAAAAJ&hl=en">View My GoogleScholar</a>
+  <br>Formerly associated with OIRL:
+  <br><a href="https://sites.google.com/view/oirl/home/">View OIRL's website</a>
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
