--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Brian Bogue Jimenez # your name (or website title) here
 logo: "/images/profile.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <br>Freelance Software Engineer<br>
-  <br>Contact me: 808-224-5780<br>
+  <br>Contact me: 808-224-5780
   <br>bribogue@gmail.com<br>
   <br><a href="/SEng_Resume_BrianBogueJimenez-2024.pdf">View My Resume</a>
   <br><a href="/CV_BrianBogue_2024.pdf">View My Curriculum Vitae (CV)</a>
